20. Final Mega Capstone Project/projects/28-istio-zero-trust-multicluster-mesh/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mesh-shop
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: shared-waypoint
    pod-security.kubernetes.io/enforce: restricted
